--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <link rel="stylesheet" href="resume.css">
+     <link rel="stylesheet" type="text/css" href="resume.css">
   </head>
   
   <body>
+    <div 
     <p>Here is my resume</p>
     <p>Here is an upgrade!</p>
   </body>
