--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
   </head>
   
   <body>
-    <div 
+    <div id="header">
+      <div id="name">
+        Roy Chancellor
+      </div>
+    </div>
+    <div id="summary">
+      <ul>
+        <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+        <li>Problems solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+        <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+        <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analsysi for process improvement and product development</li>
+        <li>Fast learner of new technologies who makes positive contributions quickly</li>
+      </ul>
+    </div>
+    <div id="problem-solver-preventer">
+    </div>
+    <div id="professional-experience">
+    </div>
+    <div id="education">
+    </div>
     <p>Here is my resume</p>
     <p>Here is an upgrade!</p>
   </body>
