--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
     <div id="header">
-      <div id="name">
+      <div id="my-name">
         Roy Chancellor
       </div>
     </div>
