--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       </div>
     </div>
     <div id="summary">
+      <p>Summary</p>
       <ul>
         <li>Driver of performance, quality, and manufacturability for new and existing products</li>
         <li>Problems solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
