--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <link rel="stylesheet" type="text/css" href="resume.css">
+     <link rel="stylesheet" href="resume.css">
   </head>
   
   <body>
