--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <p>Summary</p>
       <ul>
         <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-        <li>Problems solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+        <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
         <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-        <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analsysi for process improvement and product development</li>
+        <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
         <li>Fast learner of new technologies who makes positive contributions quickly</li>
       </ul>
     </div>
