--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       </div>
     </div>
     <div id="summary">
-      <p>Summary</p>
+      <div id="section-header">
+        <p>Summary</p>
+      </div>
       <ul>
         <li>Driver of performance, quality, and manufacturability for new and existing products</li>
         <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
