--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   </head>
   
   <body>
-    <div id="header">
+    <div id="name-contact-header">
       <div id="my-name">
         Roy Chancellor
       </div>
+      <a href="URL">roychance.wordpress.com</a>
     </div>
     <div id="summary">
       <div id="section-header">
