--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       <div id="my-name">
         Roy Chancellor
       </div>
-      <a href="URL">roychance.wordpress.com</a>
+      <div id="contact-info">
+        <a href="URL">roychance.wordpress.com</a>  <a href="URL">mailto:roychance600@gmail.com</a>
+        <p>(480) 242-6356         2014 E. Anderson Drive, Phoenix, AZ  85022</p
+      </div
     </div>
     <div id="summary">
       <div id="section-header">
