--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   </head>
   
   <body>
-    <div id="name-contact-header">
+    <div id="name-header">
       <div id="my-name">
         Roy Chancellor
       </div>
-      <div id="contact-info">
-        <a href="URL">roychance.wordpress.com</a>  <a href="URL">mailto:roychance600@gmail.com</a>
-        <p>(480) 242-6356         2014 E. Anderson Drive, Phoenix, AZ  85022</p
-      </div
+    </div>
+    <div id="contact-info">
+      <a href="URL">roychance.wordpress.com</a>  <a href="URL">roychance600@gmail.com</a>
+      <p>(480) 242-6356         2014 E. Anderson Drive, Phoenix, AZ  85022</p
     </div>
     <div id="summary">
       <div id="section-header">
