--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   </head>
   
   <body>
+    <div class="row">
+      <div class="column"></div>
+      <p>Column 1</p>
+      <div class="column"></div>
+      <p>Column 2</p>
+      <div class="column"></div>
+      <p>Column 3</p>
+    </div>
+    
     <div id="my-name">
       Roy Chancellor
     </div>
