--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
   
   <body>
     <div class="row">
-      <div class="column"></div>
-      <p>Column 1</p>
-      <div class="column"></div>
-      <p>Column 2</p>
-      <div class="column"></div>
-      <p>Column 3</p>
+      <div class="column"><p>Column 1</p></div>
+      <div class="column"><p>Column 2</p></div>
+      <div class="column"><p>Column 3</p></div>
     </div>
     
     <div id="my-name">
