--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
     <div class="row">
-      <div class="column"><p>Column 1</p></div>
+      <div class="column">Column 1</div>
       <div class="column"><p>Column 2</p></div>
       <div class="column"><p>Column 3</p></div>
     </div>
