--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <div class="row">
       <div class="column">Column 1</div>
-      <div class="column"><p>Column 2</p></div>
-      <div class="column"><p>Column 3</p></div>
+      <div class="column">Column 2</div>
+      <div class="column">Column 3</div>
     </div>
     
     <div id="my-name">
