--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   
   <body>
     <div class="row">
-      <div class="column">Column 1</div>
-      <div class="column">Column 2</div>
-      <div class="column">Column 3</div>
+      <div class="column left" style="background-color:#aaa;">
+      <h2>Column 1</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column middle" style="background-color:#bbb;">
+      <h2>Column 2</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column right" style="background-color:#ccc;">
+      <h2>Column 3</h2>
+      <p>Some text..</p>
     </div>
     
     <div id="my-name">
