--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
   
   <body>
     <div class="row">
-      <div class="column left" style="background-color:#aaa;">
-      <h2>Column 1</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column middle" style="background-color:#bbb;">
-      <h2>Column 2</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column right" style="background-color:#ccc;">
-      <h2>Column 3</h2>
-      <p>Some text..</p>
+      <div class="column resume-name" style="background-color:#aaa;">
+        <h1>Roy Chancellor</h1>
+      </div>
+      <div class="column resume-contact" style="background-color:#bbb;">
+        <p>roychance.wordpress.com</p>
+      </div>
     </div>
     
     <div id="my-name">
