--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
       <div class="column resume-name" style="background-color:#aaa;">
         <h1>Roy Chancellor</h1>
       </div>
-      <div class="column resume-contact" style="background-color:#bbb;">
-        <p>roychance.wordpress.com</p>
+      <div class="column resume-contact-left" style="background-color:#bbb;">
+        <a href="URL">roychance.wordpress.com</a>
+        <p>(480) 242-6356
+      </div>
+      <div class="column resume-contact-right" style="background-color:#aaa;">
+        <p>roychance600@gmail.com</p>
+        <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
       </div>
     </div>
     
