--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
       </div>
     </div>
     
-    <div id="my-name">
-      Roy Chancellor
-    </div>
-    <div id="contact-info">
-      <a href="URL">roychance.wordpress.com</a>  <a href="URL">roychance600@gmail.com</a>
-      <p>(480) 242-6356         2014 E. Anderson Drive, Phoenix, AZ  85022</p
-    </div>
-    <div id="summary">
-      <div id="section-header">
-        <p>Summary</p>
+    <div class="row">
+      <div class="column summary" style="background-color:#aaa;">
+        <div id="section-header">
+          <p>Summary</p>
+        </div>
+        <ul>
+          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
+          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+        </ul>
       </div>
-      <ul>
-        <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-        <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-        <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-        <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-        <li>Fast learner of new technologies who makes positive contributions quickly</li>
-      </ul>
+      <div class="column problem-solver-preventer" style="background-color:#bbb;">
+        <p>all the text and images...</p>
+        <p>(480) 242-6356
+      </div>
     </div>
+    
     <div id="problem-solver-preventer">
     </div>
     <div id="professional-experience">
