--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
         <h1>Roy Chancellor</h1>
       </div>
       <div class="column resume-contact-left" style="background-color:#bbb;">
-        <a href="URL">roychance.wordpress.com</a>
-        <p>(480) 242-6356
+        <div id="my-contact">
+          <a href="URL">roychance.wordpress.com</a>
+          <p>(480) 242-6356
+        </div>
       </div>
       <div class="column resume-contact-right" style="background-color:#aaa;">
-        <p>roychance600@gmail.com</p>
-        <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
+        <div id="my-contact">
+          <p>roychance600@gmail.com</p>
+          <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
+        </div>
       </div>
     </div>
     
