--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="column problem-solver-preventer" style="background-color:#bbb;">
         <p>all the text and images...</p>
-        <p>(480) 242-6356
+        <p>more junk...
       </div>
     </div>
     
