--- a/index.html
+++ b/index.html
@@ -43,32 +43,12 @@
     </div>
     
     <div class="row">
-      <div class="column professional-experience" style="background-color:#aaa;">
+      <div class="column professional-experience-narrow" style="background-color:#aaa;">
         <div id="section-header">
           <p>Professional Experience</p>      
         </div>
         <div id="company-school-name">
-          <p>Comapny 1</p>      
-        </div>
-        <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
-        </ul>
-        <div id="company-school-name">
-          <p>Comapny 2</p>      
-        </div>
-        <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
-        </ul>
-        <div id="company-school-name">
-          <p>Comapny 3</p>      
+          <p>Company 1</p>      
         </div>
         <ul>
           <li>Driver of performance, quality, and manufacturability for new and existing products</li>
@@ -86,7 +66,32 @@
           <p>School 1</p>
           <p>School 2</p>
           <p>School 3</p>
-        </div
+        </div>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="column professional-experience-full" style="background-color:#bbb;">
+        <div id="company-school-name">
+          <p>Company 2</p>      
+        </div>
+        <ul>
+          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
+          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+        </ul>
+        <div id="company-school-name">
+          <p>Company 3</p>      
+        </div>
+        <ul>
+          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
+          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+        </ul>
       </div>
     </div>
   </body>
