--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </ul>
       </div>
       <div class="column problem-solver-preventer" style="background-color:#bbb;">
+        <div id="section-header">
+          <p>Project Showcase</p>
+        </div>
         <p>all the text and images...</p>
         <p>more junk...
       </div>
