--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </div>
       <div class="column resume-contact-left" style="background-color:#bbb;">
         <div id="my-contact">
-          <a href="URL">roychance.wordpress.com</a>
+          <p>roychance.wordpress.com</p>
           <p>(480) 242-6356
         </div>
       </div>
