--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
         <div id="section-header">
           <p>Project Showcase</p>
         </div>
-        <p>all the text and images...</p>
-        <p>more junk...
+        <h4>CUSTOMER COMPLAINT:  DIM EDGES ON EL LAMPS</h4>
+        <p>Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
+          at an automotive customer. Installed a statistical control plan that permanently eliminated the root cause and
+          drove the complaint to zero incidents.</p>
+        <h4>NEW PRODUCT INTRODUCTION:  SUBSTRATE STICKING</h4>
+        <p>New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
+          UV curing, but was unable to get to root cause.  Implemented a simple die-cutting solution that enabled lamp
+          removal and allowed a high-yield, on-time launch.</p>
       </div>
     </div>
     
