--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
           <p>Professional Experience</p>      
         </div>
         <div id="company-school-name">
-          <p>Company 1</p>      
+          <p>Master Teacher of Mathematics</p>
+          <div class="date">8/2008-5/2013 and 8/2015-Present</div>
+          <p>Great Hearts Academies, Phoenix, AZ</p>
         </div>
         <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Deliver dynamic mathematics instruction using the Socratic method that promotes student engagement</li>
+          <li>Develop course content for an all-honors curriculum from Algebra 1 through Calculus 2</li>
+          <li>Mentor teachers in pedagogy, classroom management, and writing course curricula</li>
         </ul>
       </div>
       <div class="column education" style="background-color:#bbb;">
