--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="column summary" style="background-color:#aaa;">
         <div id="section-header">
-          <p>Summary</p>
+          <p>SUMMARY</p>
         </div>
         <ul>
           <li>Driver of performance, quality, and manufacturability for new and existing products</li>
@@ -38,7 +38,7 @@
       </div>
       <div class="column problem-solver-preventer" style="background-color:#bbb;">
         <div id="section-header">
-          <p>Project Showcase</p>
+          <p>PROJECT SHOWCASE</p>
         </div>
         <h4>CUSTOMER COMPLAINT:  DIM EDGES ON EL LAMPS</h4>
         <p>Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
@@ -54,10 +54,10 @@
     <div class="row">
       <div class="column professional-experience-narrow" style="background-color:#aaa;">
         <div id="section-header">
-          <p>Professional Experience</p>      
+          <p>PROFESSIONAL EXPERIENCE</p>      
         </div>
         <div id="company-school-name">
-          <p>Master Teacher of Mathematics</p>
+          <h5>Master Teacher of Mathematics</h5>
           <div class="date">8/2008-5/2013 and 8/2015-Present</div>
           <p>Great Hearts Academies, Phoenix, AZ</p>
         </div>
@@ -69,12 +69,12 @@
       </div>
       <div class="column education" style="background-color:#bbb;">
         <div id="section-header">
-          <p>Education</p>      
+          <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
-          <p>School 1</p>
-          <p>School 2</p>
-          <p>School 3</p>
+          <p>Rochester Institute of Technology</p>
+          <p>Texas A&M University</p>
+          <p>Arizona State University</p>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
     <div class="row">
       <div class="column professional-experience-full" style="background-color:#bbb;">
         <div id="company-school-name">
-          <p>Company 2</p>      
+          <p>Schweitzer Engineering Laboratories, Pullman, WA (2013-2015)</p>      
         </div>
         <ul>
           <li>Driver of performance, quality, and manufacturability for new and existing products</li>
@@ -92,7 +92,37 @@
           <li>Fast learner of new technologies who makes positive contributions quickly</li>
         </ul>
         <div id="company-school-name">
-          <p>Company 3</p>      
+          <p>Intel Corporation, Chandler, AZ (2005-2006)</p>      
+        </div>
+        <ul>
+          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
+          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+        </ul>
+        <div id="company-school-name">
+          <p>Rogers Corporation, Chandler, AZ (1999-2005)</p>      
+        </div>
+        <ul>
+          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
+          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+        </ul>
+        <div id="company-school-name">
+          <p>Orbital Sciences Corporation, Chandler, AZ (1998-1999)</p>      
+        </div>
+        <ul>
+          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
+          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+        </ul>
+        <div id="company-school-name">
+          <p>W.L. Gore and Associates, Phoenix, AZ (1994-1998)</p>      
         </div>
         <ul>
           <li>Driver of performance, quality, and manufacturability for new and existing products</li>
