--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
           <p>PROFESSIONAL EXPERIENCE</p>      
         </div>
         <div id="company-school-name">
-          <h5>Master Teacher of Mathematics</h5>
-          <div class="date">8/2008-5/2013 and 8/2015-Present</div>
-          <p>Great Hearts Academies, Phoenix, AZ</p>
+          <p>Great Hearts Academies, Phoenix, AZ (2008-2013 & 2015-Present)</p>
         </div>
         <ul>
           <li>Deliver dynamic mathematics instruction using the Socratic method that promotes student engagement</li>
@@ -85,51 +83,47 @@
           <p>Schweitzer Engineering Laboratories, Pullman, WA (2013-2015)</p>      
         </div>
         <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Launched the new SEL-3360 ruggedized computer into manufacturing on-time and with below-expected DPU,
+            all while managing numerous last-minute design changes</li>
+          <li>Completed a major upgrade to the SEL-2730 switch under a compressed time schedule</li>
         </ul>
         <div id="company-school-name">
           <p>Intel Corporation, Chandler, AZ (2005-2006)</p>      
         </div>
         <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Performed spatial analysis of BGA joint strength that enabled engineers to pick a new lead-free solder
+            having equivalent strength to leaded solder</li>
+          <li>Statistically analyzed wafer dicing defects and used a simulation to identify a process setting that
+          reduced defects by 25%</li>
+          <li>Taught in-house statistics courses to engineers and scientists that improved their ability to
+          apply statistics in their jobs and received high ratings for clarity and passion</li>
         </ul>
         <div id="company-school-name">
           <p>Rogers Corporation, Chandler, AZ (1999-2005)</p>      
         </div>
         <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Led and coached numerous Six Sigma projects that reduced defects, improved performance, and reduced lead
+          time on multiple products that resulted in savings of $5M from 2003-2005.  Received the President's award in 2003</li>
+          <li>Drove the use of Six Sigma and Shainin Red X methods across the company through training courses
+          and influencing key executives</li>
         </ul>
         <div id="company-school-name">
           <p>Orbital Sciences Corporation, Chandler, AZ (1998-1999)</p>      
         </div>
         <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Designed and implemented a multi-featured stiffener over a compressed timeline that enabled a new flight
+          control module to qualify in shock and vibration.  Wrote design rules to protect future designs from similar failures.</li>
+          <li>Modeled and validated the vibration response of a modular control system that reduced or eliminated
+            qualification testing for new configurations</li>
         </ul>
         <div id="company-school-name">
           <p>W.L. Gore and Associates, Phoenix, AZ (1994-1998)</p>      
         </div>
         <ul>
-          <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
-          <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Commercialized the world's smallest coaxial cables that allowed medical ultrasound customers to reduce
+          probe footprint</li>
+          <li>Advanced the science of making micro-coaxial cables using statistical experiments and
+            documented results in technical reports</li>
         </ul>
       </div>
     </div>
