--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <ul>
           <li>Led and coached numerous Six Sigma projects that reduced defects, improved performance, and reduced lead
-          time on multiple products that resulted in savings of $5M from 2003-2005.  Received the President's award in 2003</li>
+          time on multiple products that resulted in savings of $5M from 2003-2005.  Received the President's award in 2003.</li>
           <li>Drove the use of Six Sigma and Shainin Red X methods across the company through training courses
           and influencing key executives</li>
         </ul>
