--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
           <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
+          <h6>Advanced Graduate Certificate, Applied Statistics</h6>
           <p>Rochester Institute of Technology</p>
+          <h6>M.S., Mechanical Engineering</h6>
           <p>Texas A&M University</p>
+          <h6>B.S.E., Mechanical Engineering</h6>
           <p>Arizona State University</p>
         </div>
       </div>
