--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
           <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
-          <h6>Advanced Graduate Certificate, Applied Statistics</h6>
-          <p>Rochester Institute of Technology</p>
-          <h6>M.S., Mechanical Engineering</h6>
-          <p>Texas A&M University</p>
-          <h6>B.S.E., Mechanical Engineering</h6>
-          <p>Arizona State University</p>
+          <p>Advanced Graduate Certificate, Applied Statistics</p>
+          <h6>Rochester Institute of Technology</h6>
+          <p>M.S., Mechanical Engineering</p>
+          <h6>Texas A&M University</h6>
+          <p>B.S.E., Mechanical Engineering</p>
+          <h6>Arizona State University</h6>
         </div>
       </div>
     </div>
