--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="column resume-contact-right" style="background-color:#aaa;">
         <div id="my-contact">
-          <p>roychance600@gmail.com</p>
+          <img src="email-2048-black.png style="float:left;overflow:auto;"><p>roychance600@gmail.com</p>
           <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
         </div>
       </div>
