--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="column resume-contact-right" style="background-color:#aaa;">
         <div id="my-contact">
-          <img src="iconmonstr-email-4-icon-27.png" id="icon">
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
           <p>roychance600@gmail.com</p>
           <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
         </div>
