--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       </div>
       <div class="column resume-contact-left" style="background-color:#bbb;">
         <div id="my-contact">
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
           <p>roychance.wordpress.com</p>
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
           <p>(480) 242-6356
         </div>
       </div>
@@ -19,6 +21,7 @@
         <div id="my-contact">
           <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
           <p>roychance600@gmail.com</p>
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
           <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
         </div>
       </div>
