--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       </div>
       <div class="column resume-contact-left" style="background-color:#bbb;">
         <div id="my-contact">
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-web">
           <p>roychance.wordpress.com</p>
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-phone">
           <p>(480) 242-6356
         </div>
       </div>
       <div class="column resume-contact-right" style="background-color:#aaa;">
         <div id="my-contact">
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-email">
           <p>roychance600@gmail.com</p>
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon">
+          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-home">
           <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
         </div>
       </div>
