--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       </div>
       <div class="column resume-contact-left" style="background-color:#bbb;">
         <div id="my-contact">
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-web">
+          <img style="display:inline;" src="LinkedIn.png" id="icon-web">
           <p>roychance.wordpress.com</p>
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-phone">
+          <img style="display:inline;" src="PHONE ICON.png" id="icon-phone">
           <p>(480) 242-6356</p>
         </div>
       </div>
@@ -21,7 +21,7 @@
         <div id="my-contact">
           <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-email">
           <p>roychance600@gmail.com</p>
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-home">
+          <img style="display:inline;" src="home-home-icon-80046.png" id="icon-home">
           <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
         </div>
       </div>
