--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li>Fast learner of new technologies who makes positive contributions quickly</li>
         </ul>
       </div>
-      <div class="column problem-solver-preventer" style="background-color:#bbb;">
+      <div class="column project-showcase" style="background-color:#bbb;">
         <div id="section-header">
           <p>PROJECT SHOWCASE</p>
         </div>
