--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <p>PROJECT SHOWCASE</p>
         </div>
         <h4>CUSTOMER COMPLAINT:  DIM EDGES ON EL LAMPS</h4>
+        <img style="display:inline;" src="LRunChart.JPG" id="graph">
         <p>Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
           at an automotive customer. Installed a statistical control plan that permanently eliminated the root cause and
           drove the complaint to zero incidents.</p>
