--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
           <p>PROJECT SHOWCASE</p>
         </div>
         <h4>CUSTOMER COMPLAINT:  DIM EDGES ON EL LAMPS</h4>
-        <img style="display:inline;" src="LRunChart.JPG" id="graph">
+        <img style="display:inline;" src="LRunChart.JPG" id="graph1">
         <p>Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
           at an automotive customer. Installed a statistical control plan that permanently eliminated the root cause and
           drove the complaint to zero incidents.</p>
         <h4>NEW PRODUCT INTRODUCTION:  SUBSTRATE STICKING</h4>
+        <img style="display:inline;" src="LRunChart.JPG" id="graph2">
         <p>New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
           UV curing, but was unable to get to root cause.  Implemented a simple die-cutting solution that enabled lamp
           removal and allowed a high-yield, on-time launch.</p>
