--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@
         <div id="section-header">
           <p>EDUCATION</p>      
         </div>
-        <div id="company-school-name">
-          <p>Advanced Graduate Certificate, Applied Statistics</p>
-          <h6>Rochester Institute of Technology</h6>
-          <p>M.S., Mechanical Engineering</p>
-          <h6>Texas A&M University</h6>
-          <p>B.S.E., Mechanical Engineering</p>
-          <h6>Arizona State University</h6>
+        <div id="company-school-name"><p>Advanced Graduate Certificate, Applied Statistics</p></div>
+          <h6>Rochester Institute of Technology (2004)</h6>
+        <div id="company-school-name"><p>M.S., Mechanical Engineering</p></div>
+          <h6>Texas A&M University (1993)</h6>
+        <div id="company-school-name"><p>B.S.E., Mechanical Engineering</p></div>
+          <h6>Arizona State University (1991)</h6>
         </div>
       </div>
     </div>
