--- a/index.html
+++ b/index.html
@@ -73,13 +73,21 @@
         <div id="section-header">
           <p>EDUCATION</p>      
         </div>
-        <div id="company-school-name"><p>Advanced Graduate Certificate, Applied Statistics</p></div>
+        <div id="company-school-name">
+          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-email">
+          Advanced Graduate Certificate, Applied Statistics</p>
+        </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
-        <div id="company-school-name"><p>M.S., Mechanical Engineering</p></div>
-          <h6>Texas A&M University (1993)</h6>
-        <div id="company-school-name"><p>B.S.E., Mechanical Engineering</p></div>
-          <h6>Arizona State University (1991)</h6>
+        <div id="company-school-name">
+          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-email">
+          M.S., Mechanical Engineering</p>
         </div>
+          <h6>Texas A&M University (1993)</h6>
+        <div id="company-school-name">
+          <p><p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-email">
+          B.S.E., Mechanical Engineering</p>
+        </div>
+          <h6>Arizona State University (1991)</h6>
       </div>
     </div>
     
