--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
           <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-email">
+          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-eweb">
           Advanced Graduate Certificate, Applied Statistics</p>
         </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-email">
+          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-web">
           M.S., Mechanical Engineering</p>
         </div>
           <h6>Texas A&M University (1993)</h6>
         <div id="company-school-name">
-          <p><p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-email">
+          <p><p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-web">
           B.S.E., Mechanical Engineering</p>
         </div>
           <h6>Arizona State University (1991)</h6>
