--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-eweb">
+          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-web">
           Advanced Graduate Certificate, Applied Statistics</p>
         </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
