--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <div class="row">
       <div class="column professional-experience-full" style="background-color:#bbb;">
         <div id="company-school-name">
-          <p>Schweitzer Engineering Laboratories, Pullman, WA (2013-2015)</p>      
+          <p>Schweitzer Engineering Laboratories, Pullman, WA</p>
+          <h6>Manufacturing Engineer, New Product Introduction (Jun 2013 - Jul 2015)</h6>
         </div>
         <ul>
           <li>Launched the new SEL-3360 ruggedized computer into manufacturing on-time and with below-expected DPU,
@@ -102,7 +103,8 @@
           <li>Completed a major upgrade to the SEL-2730 switch under a compressed time schedule</li>
         </ul>
         <div id="company-school-name">
-          <p>Intel Corporation, Chandler, AZ (2005-2006)</p>      
+          <p>Intel Corporation, Chandler, AZ</p>
+          <h6>Statistician (Dec 2005 - Jul 2006)</h6>
         </div>
         <ul>
           <li>Performed spatial analysis of BGA joint strength that enabled engineers to pick a new lead-free solder
@@ -113,7 +115,9 @@
           apply statistics in their jobs and received high ratings for clarity and passion</li>
         </ul>
         <div id="company-school-name">
-          <p>Rogers Corporation, Chandler, AZ (1999-2005)</p>      
+          <p>Rogers Corporation, Chandler, AZ</p>   
+          <h6>Six Sigma Master Black Belt (Jan 2003 - Dec 2005)</h6>
+          <h6>Senior Manufacturing Engineer (Sep 1999 - Dec 2002)</h6>
         </div>
         <ul>
           <li>Led and coached numerous Six Sigma projects that reduced defects, improved performance, and reduced lead
@@ -122,7 +126,8 @@
           and influencing key executives</li>
         </ul>
         <div id="company-school-name">
-          <p>Orbital Sciences Corporation, Chandler, AZ (1998-1999)</p>      
+          <p>Orbital Sciences Corporation, Chandler, AZ</p>
+          <h6>Mechanical Engineer (Aug 1998 - Sep 1999></h6>
         </div>
         <ul>
           <li>Designed and implemented a multi-featured stiffener over a compressed timeline that enabled a new flight
@@ -131,7 +136,8 @@
             qualification testing for new configurations</li>
         </ul>
         <div id="company-school-name">
-          <p>W.L. Gore and Associates, Phoenix, AZ (1994-1998)</p>      
+          <p>W.L. Gore and Associates, Phoenix, AZ</p>
+          <h6>Process Development Engineer (May 1994 - Aug 1998)</h6>
         </div>
         <ul>
           <li>Commercialized the world's smallest coaxial cables that allowed medical ultrasound customers to reduce
