--- a/index.html
+++ b/index.html
@@ -34,21 +34,27 @@
         </div>
         <ul>
           <li>Driver of performance, quality, and manufacturability for new and existing products</li>
-          <li>Problem solver and risk reducer across multiple industries including electronics assembly and custom materials processing</li>
+          <li>Problem solver and risk reducer across multiple industries including electronics assembly and
+            custom materials processing</li>
           <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and product development</li>
-          <li>Fast learner of new technologies who makes positive contributions quickly</li>
+          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and
+            product development</li>
+          <li>Key Skills:  Six Sigma DMAIC MAster Black Belt, Shainib Red X Master candidate,
+            Shainin Green Y risk reduction, DFMEA/PFMEA, Statistical Process Control/PRE-Control</li>
         </ul>
       </div>
       <div class="column project-showcase">
         <div id="section-header">
-          <p>PROJECT SHOWCASE</p>
+          <p>PROBLEM SOLVER</p>
         </div>
-        <h4>CUSTOMER COMPLAINT:  DIM EDGES ON EL LAMPS</h4>
+        <h4>Dim Edges on Automotive EL Lamps</h4>
         <p><img style="display:inline;" src="LRunChart.JPG" id="graph1">Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
           at an automotive customer. Installed a statistical control plan that permanently eliminated the root cause and
           drove the complaint to zero incidents.</p>
-        <h4>NEW PRODUCT INTRODUCTION:  SUBSTRATE STICKING</h4>
+        <div id="section-header">
+          <p>PROBLEM PREVENTER</p>
+        </div>
+        <h4>New Product Substrate Sticking</h4>
         <p><img style="display:inline;" src="LRunChart.JPG" id="graph2">New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
           UV curing, but was unable to get to root cause.  Implemented a simple die-cutting solution that enabled lamp
           removal and allowed a high-yield, on-time launch.</p>
