--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           <p>PROFESSIONAL EXPERIENCE</p>      
         </div>
         <div id="company-school-name">
-          <p>Great Hearts Academies, Phoenix, AZ (2008-2013 & 2015-Present)</p>
+          <p>Great Hearts Academies, Phoenix, AZ</p>
+          <h6>Master Teacher of Mathematics (Aug 2008 - May 2013 & Aug 2015 - Present)</h6>
         </div>
         <ul>
           <li>Deliver dynamic mathematics instruction using the Socratic method that promotes student engagement</li>
