--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
           <li>Problem solver and risk reducer across multiple industries including electronics assembly and
             custom materials processing</li>
           <li>Successful leader of teams that achieved annual savings of more than $5M over 3 years</li>
-          <li>Broad technical skills in DMAIC, Shainin Red X, and statistical analysis for process improvement and
-            product development</li>
-          <li>Key Skills:  Six Sigma DMAIC MAster Black Belt, Shainib Red X Master candidate,
-            Shainin Green Y risk reduction, DFMEA/PFMEA, Statistical Process Control/PRE-Control</li>
+          <li>Broad technical skills in Six Sigma DMAIC, Shainin Red X, Shainin Green Y risk reduction, DFMEA/PFMEA,
+            and statistical methods for process improvement and product development</li>
         </ul>
       </div>
       <div class="column project-showcase">
@@ -72,7 +70,8 @@
         </div>
         <ul>
           <li>Deliver dynamic mathematics instruction using the Socratic method that promotes student engagement</li>
-          <li>Develop course content for an all-honors curriculum from Algebra 1 through Calculus 2</li>
+          <li>Create and maintain course content including lessons and exams for an all-honors curriculum ranging
+            from Algebra 1 through Calculus 2</li>
           <li>Mentor teachers in pedagogy, classroom management, and writing course curricula</li>
         </ul>
       </div>
