--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </div>
       <div class="column resume-contact-left">
         <div id="my-contact">
-          <img style="display:inline;" src="LinkedIn.png" id="icon-web">
+          <img style="display:inline;" src="wordpressLogoSolo.png" id="icon-web">
           <p>roychance.wordpress.com</p>
           <img style="display:inline;" src="PHONE ICON.png" id="icon-phone">
           <p>(480) 242-6356</p>
