--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
           <p>PROFESSIONAL EXPERIENCE</p>      
         </div>
         <div id="company-school-name">
-          <p>Great Hearts Academies, Phoenix, AZ</p>
+          <p><img style="display:inline;" src="GREATHEARTS.png" id="icon-univ">
+            Great Hearts Academies, Phoenix, AZ</p>
           <h6>Master Teacher of Mathematics (Aug 2008 - May 2013 & Aug 2015 - Present)</h6>
         </div>
         <ul>
@@ -85,12 +86,12 @@
         </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-web">
+          <p><img style="display:inline;" src="TAMU.png" id="icon-univ">
           M.S., Mechanical Engineering</p>
         </div>
           <h6>Texas A&M University (1993)</h6>
         <div id="company-school-name">
-          <p><p><img style="display:inline;" src="tiger_walking_rit_color.jpg" id="icon-web">
+          <p><p><img style="display:inline;" src="ASU.png" id="icon-univ">
           B.S.E., Mechanical Engineering</p>
         </div>
           <h6>Arizona State University (1991)</h6>
@@ -100,7 +101,8 @@
     <div class="row">
       <div class="column professional-experience-full">
         <div id="company-school-name">
-          <p>Schweitzer Engineering Laboratories, Pullman, WA</p>
+          <p><img style="display:inline;" src="SEL.png" id="icon-univ">
+            Schweitzer Engineering Laboratories, Pullman, WA</p>
           <h6>Manufacturing Engineer, New Product Introduction (Jun 2013 - Jul 2015)</h6>
         </div>
         <ul>
@@ -109,7 +111,8 @@
           <li>Completed a major upgrade to the SEL-2730 switch under a compressed time schedule</li>
         </ul>
         <div id="company-school-name">
-          <p>Intel Corporation, Chandler, AZ</p>
+          <p><img style="display:inline;" src="INTEL.png" id="icon-univ">
+            Intel Corporation, Chandler, AZ</p>
           <h6>Statistician (Dec 2005 - Jul 2006)</h6>
         </div>
         <ul>
@@ -121,7 +124,8 @@
           apply statistics in their jobs and received high ratings for clarity and passion</li>
         </ul>
         <div id="company-school-name">
-          <p>Rogers Corporation, Chandler, AZ</p>   
+          <p><img style="display:inline;" src="ROGERS.png" id="icon-univ">
+            Rogers Corporation, Chandler, AZ</p>   
           <h6>Six Sigma Master Black Belt (Jan 2003 - Dec 2005)</h6>
           <h6>Senior Manufacturing Engineer (Sep 1999 - Dec 2002)</h6>
         </div>
@@ -132,7 +136,8 @@
           and influencing key executives</li>
         </ul>
         <div id="company-school-name">
-          <p>Orbital Sciences Corporation, Chandler, AZ</p>
+          <p><img style="display:inline;" src="ORBITAL.png" id="icon-univ">
+            Orbital Sciences Corporation, Chandler, AZ</p>
           <h6>Mechanical Engineer (Aug 1998 - Sep 1999></h6>
         </div>
         <ul>
@@ -142,7 +147,8 @@
             qualification testing for new configurations</li>
         </ul>
         <div id="company-school-name">
-          <p>W.L. Gore and Associates, Phoenix, AZ</p>
+          <p><img style="display:inline;" src="GORE.png" id="icon-univ">
+            W.L. Gore and Associates, Phoenix, AZ</p>
           <h6>Process Development Engineer (May 1994 - Aug 1998)</h6>
         </div>
         <ul>
