--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="RIT.jpg" id="icon-univ">
+          <p><img style="display:inline;" src="RIT.png" id="icon-univ">
           Advanced Graduate Certificate, Applied Statistics</p>
         </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
