--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p>PROBLEM PREVENTER</p>
         </div>
         <h4>New Product Substrate Sticking</h4>
-        <p><img style="display:inline;" src="LRunChart.JPG" id="graph2">New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
+        <p><img style="display:inline;" src="SKINSTICKING.PNG" id="graph2">New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
           UV curing, but was unable to get to root cause.  Implemented a simple die-cutting solution that enabled lamp
           removal and allowed a high-yield, on-time launch.</p>
       </div>
