--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div id="company-school-name">
           <p><img style="display:inline;" src="RIT.png" id="icon-univ">
-          Advanced Graduate Certificate, Applied Statistics</p>
+          Advanced Graduate Certificate, Statistics</p>
         </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
         <div id="company-school-name">
