--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
           <h6>Texas A&M University (1993)</h6>
         <div id="company-school-name">
-          <p><p><img style="display:inline;" src="ASU.png" id="icon-univ">
+          <p><img style="display:inline;" src="ASU.png" id="icon-univ">
           B.S.E., Mechanical Engineering</p>
         </div>
           <h6>Arizona State University (1991)</h6>
