--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div id="section-header">
           <p>PROBLEM SOLVER</p>
         </div>
-        <h4>Dim Edges on Automotive EL Lamps</h4>
-        <p><img style="display:inline;" src="LRunChart.JPG" id="graph1">Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
+        <h4><img style="display:inline;" src="LRunChart.JPG" id="graph1">Dim Edges on Automotive EL Lamps</h4>
+        <p>Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
           at an automotive customer. Installed a statistical control plan that permanently eliminated the root cause and
           drove the complaint to zero incidents.</p>
         <br>
@@ -54,8 +54,8 @@
         <div id="section-header">
           <p>PROBLEM PREVENTER</p>
         </div>
-        <h4>New Product Substrate Sticking</h4>
-        <p><img style="display:inline;" src="SKINSTICKING.png" id="graph2">New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
+        <h4><img style="display:inline;" src="SKINSTICKING.png" id="graph2">New Product Substrate Sticking</h4>
+        <p>New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
           UV curing, but was unable to get to root cause.  Implemented a simple die-cutting solution that enabled lamp
           removal and allowed a high-yield, on-time launch.</p>
       </div>
