--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
      <link rel="stylesheet" href="resume.css">
   </head>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <body>
     <div class="row">
       <div class="column resume-name">
