--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			
 			<div class="row">
 				<div class="col-xs-12 user-profile text-center">
-					<h1 id="user-name">Nathan Chancellor</h1>
+					<h1 id="user-name">Roy Chancellor</h1>
 				</div>
 			</div>
 			<div class="row">
