--- a/index.html
+++ b/index.html
@@ -44,80 +44,46 @@
 		</div>
 	</div>
 	</nav>
-</header>
-
-		<div class="container wrapper">
-			
-			<div class="row">
-				<div class="col-sm-3 col-centered">
-					<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="/profile.jpg">
-				</div>
+	</header>
+	
+	<div class="container wrapper">
+		<div class="row">
+			<div class="col-sm-3 col-centered">
+				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="/Head Shot.jpg">
 			</div>
-			
-			<div class="row">
-				<div class="col-xs-12 user-profile text-center">
-					<h1 id="user-name">Roy Chancellor</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 user-social text-center">
-				
-<a href="https://pgp.key-server.io/pks/lookup?op=vindex&search=0x99739260CB6CB716" title="GPG"><i class="fas fa-unlock-alt fa-3x" aria-hidden="true"></i></a>
-
-
-
-
-
-<a href="https://twitter.com/nathanchance" rel="me" title="Twitter"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a>
-
-
-
-
-
-
-<a href="https://github.com/nathanchance" rel="me" title="GitHub"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
-
-
-
-
-<a href="https://linkedin.com/in/nathanchancellor" rel="me" title="LinkedIn"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
-
-
-<a href="https://instagram.com/nchancellor" rel="me" title="Instagram"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
-
-
-<a href="https://t.me/nathanchance" rel="me" title="Telegram"><i class="fab fa-telegram fa-3x" aria-hidden="true"></i></a>
-
-
-
-<a href="mailto:natechancellor@gmail.com" title="Email"><i class="fas fa-envelope fa-3x" aria-hidden="true"></i></a>
-
-
-
-
-
-
-
-
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4 user-description text-center">
-					<p>Hello, my name is Nathan and I am a university student and amateur kernel hacker. I am mostly interested in compilers, lower level architecture stuff, and security. If you have any questions about my projects or just want to talk, feel free to reach out to me using any of the methods above! If you are looking for Flash Kernel, please see the downloads folder above.</p>
-				</div>
-			</div>
-			<div class="push"></div>
 		</div>
-		<footer class="footer text-center">
-<p>Copyright &copy; 2019 Nathan Chancellor -
-<span class="credit">
-	Powered by
-	<a target="_blank" href="https://gohugo.io">Hugo</a>
-	and
-	<a target="_blank" href="https://github.com/LordMathis/hugo-theme-nix/">Nix</a> theme.
-</span>
-</p>
-</footer>
-
-	</body>
+		<div class="row">
+			<div class="col-xs-12 user-profile text-center">
+				<h1 id="user-name">Roy Chancellor</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 user-social text-center">
+				<a href="https://pgp.key-server.io/pks/lookup?op=vindex&search=0x99739260CB6CB716" title="GPG"><i class="fas fa-unlock-alt fa-3x" aria-hidden="true"></i></a>
+				<a href="https://twitter.com/roychance600" rel="me" title="Twitter"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a>
+				<a href="https://github.com/roychancellor" rel="me" title="GitHub"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
+				<a href="https://linkedin.com/in/roychancellor" rel="me" title="LinkedIn"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
+				<a href="https://instagram.com/roychance600" rel="me" title="Instagram"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
+				<a href="https://t.me/roychance" rel="me" title="Telegram"><i class="fab fa-telegram fa-3x" aria-hidden="true"></i></a>
+				<a href="mailto:roychance600@gmail.com" title="Email"><i class="fas fa-envelope fa-3x" aria-hidden="true"></i></a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-md-offset-4 user-description text-center">
+				<p>Hello, my name is Roy and I am beginning a career as a Java developer, focusing on back-end web applications.  I am currently at GCU earning a Java programming certifcate after 14 years as a mechanical engineer and 11 years as a mathematics educator.  Check out the links above.</p>
+			</div>
+		</div>
+		<div class="push"></div>
+	</div>
+	<footer class="footer text-center">
+		<p>Copyright &copy; 2019 Roy Chancellor -
+		<span class="credit">
+			Powered by
+			<a target="_blank" href="https://gohugo.io">Hugo</a>
+			and
+			<a target="_blank" href="https://github.com/LordMathis/hugo-theme-nix/">Nix</a> theme.
+		</span>
+		</p>
+	</footer>
+</body>
 </html>
