--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" id="green-terminal" href=https://roychance.wordpress.com>roychance page</a>
+			<a class="navbar-brand" id="green-terminal" href=https://roychancellor.github.io/index.html>home page</a>
 		</div>
 		<div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
@@ -32,10 +32,10 @@
 					<a href="https://roychance.wordpress.com">/home/roy</a>
 				</li>
 				<li class="dropdown">
-					<a href="/projects">~/projects</a>
+					<a href="/java projects">~/projects</a>
         			</li>
 				<li class="dropdown">
-            				<a href="/nathan_chancellor_resume.pdf">~/resume</a>
+            				<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
 				</li>
 				<li class="dropdown">
 					<a href="/downloads">~/downloads</a>
@@ -49,7 +49,7 @@
 	<div class="container wrapper">
 		<div class="row">
 			<div class="col-sm-3 col-centered">
-				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="/Head Shot.jpg">
+				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="Head Shot.jpg">
 			</div>
 		</div>
 		<div class="row">
