--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="https://roychance.wordpress.com">/home/roy</a>
 				</li>
 				<li class="dropdown">
-					<a href="/java projects">~/projects</a>
+					<a href="projects.html">~/java projects</a>
         			</li>
 				<li class="dropdown">
             				<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
@@ -49,7 +49,7 @@
 	<div class="container wrapper">
 		<div class="row">
 			<div class="col-sm-3 col-centered">
-				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="Head Shot.jpg">
+				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="/Head Shot.jpg">
 			</div>
 		</div>
 		<div class="row">
